# sinewave

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md
include/: color.hpp  object.hpp  pyramid.hpp  shape.hpp  transform.hpp  vector.hpp
src/: main.cpp  object.cpp  pyramid.cpp
